# Allah

./: .env.example  .gitignore  README.md
.github/workflows/: deploy.yml
backend/: pyproject.toml
backend/app/: __init__.py  api.py  bot.py  config.py  data.py  emoji.py  keyboards.py  main.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: tonconnect-manifest.json
frontend/src/: App.tsx  OperatorAdminPanel.tsx  main.tsx  styles.css  types.ts
frontend/src/lib/: api.ts  telegram.ts
